--- a/styles/animations.css
+++ b/styles/animations.css
@@ -3,10 +3,12 @@
         transform: scale(0);
         z-index: -1;
     }
+
     50% {
         transform: scale(1);
         z-index: 9999;
     }
+
     100% {
         transform: scale(1);
         z-index: 9999;
@@ -19,9 +21,28 @@
         filter: blur(1px);
         z-index: 9999;
     }
+
     100% {
         opacity: 0.1;
         filter: blur(10px);
         z-index: -1;
+    }
+}
+
+@keyframes pulse-heart {
+    0% {
+        transform: scale(1);
+    }
+
+    10% {
+        transform: scale(1.1);
+    }
+
+    20% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(1);
     }
 }
