--- a/styles/animations.css
+++ b/styles/animations.css
@@ -46,3 +46,20 @@
         transform: scale(1);
     }
 }
+
+.closing-animation {
+    animation: windowCloseAnimation 0.4s ease-out forwards;
+    pointer-events: none;
+}
+
+@keyframes windowCloseAnimation {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+
+    100% {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+}
